--- a/view/book-details.html
+++ b/view/book-details.html
@@ -378,22 +378,22 @@
               <li><span> გამომცემლობა:</span> <span>საბჭოთა მწერალი</span></li>
               <li><span> გამოცემის წელი: </span> <span>1957</span></li>
               <li><span> ენა:</span> <span>ქართული</span></li>
-              <li><span> ISBN:</span> <span></span></li>
-              <li><span> ISSN:</span> <span></span></li>
-              <li><span> ჟურნალის სახელწოდება:</span> <span></span></li>
+              <!-- <li><span> ISBN:</span> <span></span></li>
+              <li><span> ISSN:</span> <span></span></li> -->
+              <!-- <li><span> ჟურნალის სახელწოდება:</span> <span></span></li>
               <li><span> კრებულის სახელწოდება:</span> <span></span></li>
               <li><span> ნომერი:</span> <span></span></li>
               <li><span> სერია:</span> <span></span></li>
               <li><span> ჟანრი:</span> <span></span></li>
-              <li><span> გამოცემა:</span> <span></span></li>
+              <li><span> გამოცემა:</span> <span></span></li> -->
               <li>
                 <span> პასუხისმგებელი პირი:</span> <span>იოსელიანი, თ.</span>
               </li>
-              <li><span> პასუხისმგებელი ორგანიზაცია:</span> <span></span></li>
+              <!-- <li><span> პასუხისმგებელი ორგანიზაცია:</span> <span></span></li>
               <li><span> ტომი:</span> <span></span></li>
               <li><span> ტირაჟი:</span> <span></span></li>
               <li><span> ფიზიკური აღწერილობა:</span> <span></span></li>
-              <li><span> დამატებითი ინფორმაცია:</span> <span></span></li>
+              <li><span> დამატებითი ინფორმაცია:</span> <span></span></li> -->
             </ul>
           </div>
         </div>
