design fully new (23.02)

--- a/view/about-project.html
+++ b/view/about-project.html
@@ -74,9 +74,9 @@
               ხელმისაწვდომობა.
             </p>
             <p>
-              არქივში ყველა რესურსი ღია წვდომით არის განთავსებული, რაც ყველა
-              დაინტერესებულ პირს საშუალებას მისცემს, გამოიყენონ მასალები როგორც
-              სწავლა-სწავლების, ისე კვლევითი მიზნებისთვის.
+              არქივში ყველა რესურსი ღია წვდომით არის განთავსებული, რაც
+              დაინტერესებულ პირებს საშუალებას მისცემს, გამოიყენონ მასალები
+              როგორც სწავლა-სწავლების, ისე კვლევითი მიზნებისთვის.
             </p>
           </article>
         </section>
