--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -236,12 +236,12 @@ body {
               }
 
               &:checked::before {
-                background-color: #0077ff;
+                background-color: $header-background;
               }
 
               &:checked {
-                background-color: #0077ff;
-                border: 2px solid #0077ff;
+                background-color: $header-background;
+                border: 2px solid $header-background;
               }
 
               &:checked::after {
