--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -459,11 +459,11 @@ body {
   height: 100%;
 }
 .main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked::before {
-  background-color: #0077ff;
+  background-color: #a6bd9e;
 }
 .main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked {
-  background-color: #0077ff;
-  border: 2px solid #0077ff;
+  background-color: #a6bd9e;
+  border: 2px solid #a6bd9e;
 }
 .main-content-wrapper .filter-books-wrapper .media-type-section .dropdown-section-wrapper .dropdown label input[type=checkbox]:checked::after {
   content: "";
